--- a/TKV2025.htm
+++ b/TKV2025.htm
@@ -6,11 +6,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="TKV2025_soubory/filelist.xml">
-<title>TKV2024</title>
+<title>TKV2025</title>
 <![if !supportTabStrip]>
 <link id="shLink" href="TKV2025_soubory/sheet001.htm">
 <link id="shLink" href="TKV2025_soubory/sheet002.htm">
@@ -50,33 +50,33 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=30;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "POŘADÍ";
- c_rgszSh[1] = "POŘADÍ-DI";
- c_rgszSh[2] = "POŘADÍ-DO";
- c_rgszSh[3] = "VÍTĚZOVÉ";
- c_rgszSh[4] = "VÍTĚZOVÉ-DI";
- c_rgszSh[5] = "VÍTĚZOVÉ-DO";
+ c_rgszSh[0] = "POĹADĂŤ";
+ c_rgszSh[1] = "POĹADĂŤ-DI";
+ c_rgszSh[2] = "POĹADĂŤ-DO";
+ c_rgszSh[3] = "VĂŤTÄšZOVĂ‰";
+ c_rgszSh[4] = "VĂŤTÄšZOVĂ‰-DI";
+ c_rgszSh[5] = "VĂŤTÄšZOVĂ‰-DO";
  c_rgszSh[6] = "DEMLOVKA";
  c_rgszSh[7] = "DEMLOVKA-DI";
  c_rgszSh[8] = "DEMLOVKA-DO";
- c_rgszSh[9] = "PŘIBYSLAV";
- c_rgszSh[10] = "PŘIBYSLAV-DI";
- c_rgszSh[11] = "PŘIBYSLAV-DO";
+ c_rgszSh[9] = "PĹIBYSLAV";
+ c_rgszSh[10] = "PĹIBYSLAV-DI";
+ c_rgszSh[11] = "PĹIBYSLAV-DO";
  c_rgszSh[12] = "BRTNICE";
  c_rgszSh[13] = "BRTNICE-DI";
  c_rgszSh[14] = "BRTNICE-DO";
- c_rgszSh[15] = "U DEJVA";
- c_rgszSh[16] = "U DEJVA-DI";
- c_rgszSh[17] = "U DEJVA-DO";
- c_rgszSh[18] = "KOVÁRNA";
- c_rgszSh[19] = "KOVÁRNA-DI";
- c_rgszSh[20] = "KOVÁRNA-DO";
+ c_rgszSh[15] = "UÂ DEJVA";
+ c_rgszSh[16] = "UÂ DEJVA-DI";
+ c_rgszSh[17] = "UÂ DEJVA-DO";
+ c_rgszSh[18] = "KOVĂRNA";
+ c_rgszSh[19] = "KOVĂRNA-DI";
+ c_rgszSh[20] = "KOVĂRNA-DO";
  c_rgszSh[21] = "TAJFUN";
  c_rgszSh[22] = "TAJFUN-DI";
  c_rgszSh[23] = "TAJFUN-DO";
- c_rgszSh[24] = "MUSIC CLUB";
- c_rgszSh[25] = "MUSIC CLUB-DI";
- c_rgszSh[26] = "MUSIC CLUB-DO";
+ c_rgszSh[24] = "MUSICÂ CLUB";
+ c_rgszSh[25] = "MUSICÂ CLUB-DI";
+ c_rgszSh[26] = "MUSICÂ CLUB-DO";
  c_rgszSh[27] = "MADEIRA";
  c_rgszSh[28] = "MADEIRA-DI";
  c_rgszSh[29] = "MADEIRA-DO";
@@ -357,27 +357,27 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>POŘADÍ</x:Name>
+    <x:Name>POĹADĂŤ</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>POŘADÍ-DI</x:Name>
+    <x:Name>POĹADĂŤ-DI</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet002.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>POŘADÍ-DO</x:Name>
+    <x:Name>POĹADĂŤ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet003.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍTĚZOVÉ</x:Name>
+    <x:Name>VĂŤTÄšZOVĂ‰</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet004.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍTĚZOVÉ-DI</x:Name>
+    <x:Name>VĂŤTÄšZOVĂ‰-DI</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet005.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍTĚZOVÉ-DO</x:Name>
+    <x:Name>VĂŤTÄšZOVĂ‰-DO</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet006.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -393,15 +393,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2025_soubory/sheet009.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PŘIBYSLAV</x:Name>
+    <x:Name>PĹIBYSLAV</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet010.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PŘIBYSLAV-DI</x:Name>
+    <x:Name>PĹIBYSLAV-DI</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet011.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PŘIBYSLAV-DO</x:Name>
+    <x:Name>PĹIBYSLAV-DO</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet012.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -429,15 +429,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2025_soubory/sheet018.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA</x:Name>
+    <x:Name>KOVĂRNA</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet019.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA-DI</x:Name>
+    <x:Name>KOVĂRNA-DI</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet020.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA-DO</x:Name>
+    <x:Name>KOVĂRNA-DO</x:Name>
     <x:WorksheetSource HRef="TKV2025_soubory/sheet021.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -495,7 +495,7 @@ function fnSetActiveSheet(iSh)
  <frame src="TKV2025_soubory/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
-   <p>Na této stránce jsou použity rámce, prohlížeč je však nepodporuje.</p>
+   <p>Na tĂ©to strĂˇnce jsou pouĹľity rĂˇmce, prohlĂ­ĹľeÄŤ je vĹˇak nepodporuje.</p>
   </body>
  </noframes>
 </frameset>
