--- a/TKV2025_soubory/tabstrip.htm
+++ b/TKV2025_soubory/tabstrip.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File href="../TKV2025.htm">
@@ -24,27 +24,27 @@ A {
 <body topmargin=0 leftmargin=0 bgcolor="#808080">
 <table border=0 cellspacing=1>
  <tr>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="Arial" color="#000000">POŘADÍ</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet002.htm" target="frSheet"><font face="Arial" color="#000000">POŘADÍ-DI</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet003.htm" target="frSheet"><font face="Arial" color="#000000">POŘADÍ-DO</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet004.htm" target="frSheet"><font face="Arial" color="#000000">VÍTĚZOVÉ</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet005.htm" target="frSheet"><font face="Arial" color="#000000">VÍTĚZOVÉ-DI</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet006.htm" target="frSheet"><font face="Arial" color="#000000">VÍTĚZOVÉ-DO</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="Arial" color="#000000">POĹADĂŤ</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet002.htm" target="frSheet"><font face="Arial" color="#000000">POĹADĂŤ-DI</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet003.htm" target="frSheet"><font face="Arial" color="#000000">POĹADĂŤ-DO</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet004.htm" target="frSheet"><font face="Arial" color="#000000">VĂŤTÄšZOVĂ‰</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet005.htm" target="frSheet"><font face="Arial" color="#000000">VĂŤTÄšZOVĂ‰-DI</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet006.htm" target="frSheet"><font face="Arial" color="#000000">VĂŤTÄšZOVĂ‰-DO</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet007.htm" target="frSheet"><font face="Arial" color="#000000">DEMLOVKA</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet008.htm" target="frSheet"><font face="Arial" color="#000000">DEMLOVKA-DI</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet009.htm" target="frSheet"><font face="Arial" color="#000000">DEMLOVKA-DO</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet010.htm" target="frSheet"><font face="Arial" color="#000000">PŘIBYSLAV</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet011.htm" target="frSheet"><font face="Arial" color="#000000">PŘIBYSLAV-DI</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet012.htm" target="frSheet"><font face="Arial" color="#000000">PŘIBYSLAV-DO</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet010.htm" target="frSheet"><font face="Arial" color="#000000">PĹIBYSLAV</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet011.htm" target="frSheet"><font face="Arial" color="#000000">PĹIBYSLAV-DI</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet012.htm" target="frSheet"><font face="Arial" color="#000000">PĹIBYSLAV-DO</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet013.htm" target="frSheet"><font face="Arial" color="#000000">BRTNICE</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet014.htm" target="frSheet"><font face="Arial" color="#000000">BRTNICE-DI</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet015.htm" target="frSheet"><font face="Arial" color="#000000">BRTNICE-DO</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet016.htm" target="frSheet"><font face="Arial" color="#000000">U DEJVA</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet017.htm" target="frSheet"><font face="Arial" color="#000000">U DEJVA-DI</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet018.htm" target="frSheet"><font face="Arial" color="#000000">U DEJVA-DO</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet019.htm" target="frSheet"><font face="Arial" color="#000000">KOVÁRNA</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet020.htm" target="frSheet"><font face="Arial" color="#000000">KOVÁRNA-DI</font></a>&nbsp;</small></small></b></td>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet021.htm" target="frSheet"><font face="Arial" color="#000000">KOVÁRNA-DO</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet019.htm" target="frSheet"><font face="Arial" color="#000000">KOVĂRNA</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet020.htm" target="frSheet"><font face="Arial" color="#000000">KOVĂRNA-DI</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet021.htm" target="frSheet"><font face="Arial" color="#000000">KOVĂRNA-DO</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet022.htm" target="frSheet"><font face="Arial" color="#000000">TAJFUN</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet023.htm" target="frSheet"><font face="Arial" color="#000000">TAJFUN-DI</font></a>&nbsp;</small></small></b></td>
  <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet024.htm" target="frSheet"><font face="Arial" color="#000000">TAJFUN-DO</font></a>&nbsp;</small></small></b></td>
