--- a/TKV2025_soubory/sheet021.htm
+++ b/TKV2025_soubory/sheet021.htm
@@ -409,7 +409,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl171 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - KOVÁRNA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,8 +1085,8 @@ else
   <td class=xl71>Výše odměny</td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>13</td>
+  <td colspan=2 class=xl183 style='border-right:.5pt solid black;border-left:
+  none'>14</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1219,11 +1219,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>218
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>179
   Kč</td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl183 style='border-right:.5pt solid black;border-left:
   none'>7</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
@@ -1357,7 +1357,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>192
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>158
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1585,11 +1585,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>135
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>111
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
   none'>1 288 Kč</td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
@@ -1814,7 +1814,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3700</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>128
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>105
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2043,7 +2043,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>121
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>100
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2177,7 +2177,10 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Kříž Miroslav [CZE068544]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2750</td>
-  <td class=xl139></td>
+  <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>78
+  Kč</td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
   <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
