--- a/TKV2025_soubory/sheet024.htm
+++ b/TKV2025_soubory/sheet024.htm
@@ -409,7 +409,7 @@ else
   <td class=xl70 width=86 style='width:65pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl171 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - TAJFUN - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,8 +1085,8 @@ else
   <td class=xl71>Výše odměny</td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>13</td>
+  <td colspan=2 class=xl183 style='border-right:.5pt solid black;border-left:
+  none'>14</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,12 +1220,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8000</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>470
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>386
   Kč</td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>12</td>
+  <td colspan=2 class=xl183 style='border-right:.5pt solid black;border-left:
+  none'>11</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1358,7 +1358,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>341
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>280
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1587,11 +1587,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>341
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>280
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
   none'>2 184 Kč</td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
@@ -1815,7 +1815,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5450</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>320
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>263
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2043,7 +2043,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5150</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>303
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>249
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2178,7 +2178,10 @@ else
   [CZE064385]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>11</td>
   <td class=xl70 style='border:.5pt solid windowtext'>5150</td>
-  <td class=xl139></td>
+  <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>249
+  Kč</td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
   <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
