--- a/TKV2025_soubory/sheet008.htm
+++ b/TKV2025_soubory/sheet008.htm
@@ -45,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11425 style='border-collapse:
- collapse;table-layout:fixed;width:8590pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11368 style='border-collapse:
+ collapse;table-layout:fixed;width:8547pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -56,10 +56,8 @@ else
  <col class=xl70 width=41 style='mso-width-source:userset;mso-width-alt:1499;
  width:31pt'>
  <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=104 style='mso-width-source:userset;mso-width-alt:3803;
- width:78pt'>
+ <col class=xl70 width=47 span=2 style='mso-width-source:userset;mso-width-alt:
+ 1718;width:35pt'>
  <col class=xl70 width=182 style='mso-width-source:userset;mso-width-alt:6656;
  width:137pt'>
  <col class=xl70 width=42 style='mso-width-source:userset;mso-width-alt:1536;
@@ -281,7 +279,7 @@ else
   <td class=xl70 width=41 style='width:31pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=104 style='width:78pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=182 style='width:137pt'></td>
   <td class=xl70 width=42 style='width:32pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -408,7 +406,7 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - DEMLOVKA - 301 DI</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1083,9 +1081,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl70></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl170 align=right style='border-left:none'>16</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1218,9 +1216,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>9400</td>
   <td class=xl104></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>20</td>
+  <td class=xl172 align=right style='border-top:none;border-left:none'>20,5</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,8 +1353,8 @@ else
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl170 align=right style='border-top:none;border-left:none'>15</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1580,7 +1578,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>7950</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1803,9 +1803,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>7300</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2029,11 +2027,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>7150</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Folejtar Štěpán [CZE071065]</td>
-  <td class=xl145 style='border-left:none'>2</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2168,9 +2164,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Folejtar Štěpán [CZE071065]</td>
+  <td class=xl145 style='border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2515,8 +2511,8 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Novák Radek [CZE049908]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
   <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2686,9 +2682,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>6000</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Novák Radek [CZE049908]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -15378,7 +15376,7 @@ else
   <td width=41 style='width:31pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=104 style='width:78pt'></td>
+  <td width=47 style='width:35pt'></td>
   <td width=182 style='width:137pt'></td>
   <td width=42 style='width:32pt'></td>
   <td width=50 style='width:38pt'></td>
