--- a/TKV2025_soubory/sheet009.htm
+++ b/TKV2025_soubory/sheet009.htm
@@ -45,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11465 style='border-collapse:
- collapse;table-layout:fixed;width:8619pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11421 style='border-collapse:
+ collapse;table-layout:fixed;width:8586pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -59,8 +59,8 @@ else
  width:69pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=104 style='mso-width-source:userset;mso-width-alt:3803;
- width:78pt'>
+ <col class=xl70 width=60 style='mso-width-source:userset;mso-width-alt:2194;
+ width:45pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
  width:134pt'>
  <col class=xl70 width=42 style='mso-width-source:userset;mso-width-alt:1536;
@@ -282,7 +282,7 @@ else
   <td class=xl70 width=42 style='width:32pt'></td>
   <td class=xl70 width=92 style='width:69pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=104 style='width:78pt'></td>
+  <td class=xl70 width=60 style='width:45pt'></td>
   <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=42 style='width:32pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -409,7 +409,7 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - DEMLOVKA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1084,9 +1084,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl71>Výše odměny</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl170 align=right style='border-left:none'>16</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1222,9 +1222,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>888
   Kč</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>20</td>
+  <td class=xl172 align=right style='border-top:none;border-left:none'>20,5</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1361,8 +1361,8 @@ else
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl170 align=right style='border-top:none;border-left:none'>15</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1589,9 +1589,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>724
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
-  none'>4 298 Kč</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1818,9 +1818,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>724
   Kč</td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71>Odměny</td>
+  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
+  none'>4 298 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2046,7 +2046,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>662
   Kč</td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2183,9 +2185,7 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>568
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2528,11 +2528,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>5800</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Procházka Petr [CZE071371]</td>
-  <td class=xl145 style='border-left:none'>3</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2705,9 +2703,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Iorio Giuseppe [SUI220611]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Procházka Petr [CZE071371]</td>
+  <td class=xl145 style='border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2878,8 +2876,8 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Iorio Giuseppe [SUI220611]</td>
   <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -3049,9 +3047,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -15397,7 +15397,7 @@ else
   <td width=42 style='width:32pt'></td>
   <td width=92 style='width:69pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=104 style='width:78pt'></td>
+  <td width=60 style='width:45pt'></td>
   <td width=179 style='width:134pt'></td>
   <td width=42 style='width:32pt'></td>
   <td width=50 style='width:38pt'></td>
