--- a/TKV2025_soubory/sheet021.htm
+++ b/TKV2025_soubory/sheet021.htm
@@ -409,7 +409,7 @@ else
   <td class=xl70 width=102 style='width:77pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - KOVÁRNA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1084,9 +1084,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl71>Výše odměny</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl165 style='border-left:none'>16</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1222,9 +1222,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>168
   Kč</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>6</td>
+  <td class=xl148 style='border-top:none;border-left:none'>7,1</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1361,8 +1361,8 @@ else
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl165 style='border-top:none;border-left:none'>13</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1588,9 +1588,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>104
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
-  none'>1 288 Kč</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1817,9 +1817,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>98
   Kč</td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71>Odměny</td>
+  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
+  none'>1 288 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2046,7 +2046,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>93
   Kč</td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2182,9 +2184,7 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>73
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2527,11 +2527,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>2650</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
-  <td class=xl145 style='border-left:none'>4</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2696,9 +2694,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Klíma Kvirín [CZE066638]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Fábera Jiří [CZE075508]</td>
+  <td class=xl145 style='border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2864,9 +2862,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Vondrák Miroslav [CZE056477]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Klíma Kvirín [CZE066638]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -3028,9 +3026,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>1850</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Vondrák Miroslav [CZE056477]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
