--- a/TKV2025_soubory/sheet022.htm
+++ b/TKV2025_soubory/sheet022.htm
@@ -407,7 +407,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - TAJFUN - CELKOVÉ
   POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1083,9 +1083,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl70></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl165 style='border-left:none'>16</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1219,9 +1219,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>17200</td>
   <td class=xl104></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  <td class=xl148 style='border-top:none;border-left:none'>12,7</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1356,8 +1356,8 @@ else
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl165 style='border-top:none;border-left:none'>13</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1580,8 +1580,10 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>11200</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
-  <td class=xl95 style='border-left:none'>&nbsp;</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl95>&nbsp;</td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1804,9 +1806,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>10900</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl95 style='border-left:none'>&nbsp;</td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2029,11 +2029,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>10700</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Veverka František [CZE003157]</td>
-  <td class=xl145 style='border-left:none'>11</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2168,9 +2166,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Beneš Petr [CZE070315]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Veverka František [CZE003157]</td>
+  <td class=xl145 style='border-left:none'>11</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2515,9 +2513,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Janošťák Václav [CZE033658]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Beneš Petr [CZE070315]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2685,9 +2683,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>8400</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Janošťák Václav [CZE033658]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
