--- a/TKV2025_soubory/sheet024.htm
+++ b/TKV2025_soubory/sheet024.htm
@@ -409,7 +409,7 @@ else
   <td class=xl70 width=86 style='width:65pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - TAJFUN - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1084,9 +1084,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl71>Výše odměny</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl165 style='border-left:none'>16</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1223,9 +1223,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>430
   Kč</td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  <td class=xl148 style='border-top:none;border-left:none'>12,9</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1363,8 +1363,8 @@ else
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl165 style='border-top:none;border-left:none'>13</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1590,9 +1590,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>282
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
-  none'>2 352 Kč</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1819,9 +1819,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>272
   Kč</td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71>Odměny</td>
+  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
+  none'>2 352 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2047,7 +2047,9 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>265
   Kč</td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2183,9 +2185,7 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>262
   Kč</td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2528,11 +2528,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5350</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Veverka František [CZE003157]</td>
-  <td class=xl145 style='border-left:none'>5</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2700,9 +2698,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Beneš Petr [CZE070315]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Veverka František [CZE003157]</td>
+  <td class=xl145 style='border-left:none'>5</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2868,9 +2866,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Milichovský Jakub [CZE077171]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>1</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Beneš Petr [CZE070315]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -3035,9 +3033,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3300</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Milichovský Jakub [CZE077171]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
