--- a/TKV2025_soubory/sheet026.htm
+++ b/TKV2025_soubory/sheet026.htm
@@ -408,7 +408,7 @@ else
   <td class=xl70 width=113 style='width:85pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl174 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - MUSIC CLUB - 301
   DI</td>
   <td class=xl143>&nbsp;</td>
@@ -1084,9 +1084,9 @@ else
   style='mso-spacerun:yes'> </span></td>
   <td class=xl70></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>15</td>
+  <td class=xl165 style='border-left:none'>16</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1219,9 +1219,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>7950</td>
   <td class=xl104></td>
   <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  <td class=xl148 style='border-top:none;border-left:none'>11,5</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1356,8 +1356,8 @@ else
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
+  <td class=xl165 style='border-top:none;border-left:none'>14</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1581,7 +1581,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td colspan=3 class=xl71>Žebříček vítězů</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl100></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1805,9 +1807,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>4200</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl71 style='border-top:none'>Pořadí</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
-  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
+  <td colspan=3 class=xl71>Žebříček vítězů</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2030,11 +2030,9 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>3750</td>
   <td class=xl104></td>
   <td class=xl70></td>
-  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
-  <td class=xl145 style='border-left:none'>8</td>
+  <td class=xl71 style='border-top:none'>Pořadí</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Jméno</td>
+  <td class=xl71 style='border-top:none;border-left:none'>Počet</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2170,9 +2168,9 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Folejtar Štěpán [CZE071065]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl145 style='border-left:none'>8</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2518,8 +2516,8 @@ else
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Babický Michal [CZE063138]</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl82 style='border-top:none'>Folejtar Štěpán [CZE071065]</td>
   <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2687,9 +2685,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>2150</td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl82 style='border-top:none'>Babický Michal [CZE063138]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
